# AI-LMS-Assistant

./: .env.example  .gitignore  Caddyfile  LICENSE  PROJECT_CONTEXT.md  README.md  ai.py  careerversion.docx  careerversion.txt  detail_data.py  devstep_project_handover.md  docker-compose.yml  err.txt  error.txt  id_collector.py  linkareer_activities_20260410_2342.csv  linkareer_activities_20260411_0025.csv  linkareer_activities_20260411_2034.json  linkareer_activities_20260411_2153.json  linkareer_activities_20260412_0007.json  linkareer_activities_20260412_0106.json  linkareer_activities_20260412_1621.json  linkareer_activities_20260412_1634.json  linkareer_activities_20260412_1652.json  linkareer_activities_20260412_1747.json  linkareer_activities_20260412_1819.json  main.py  nginx.conf  out.txt  package-lock.json  package.json  prisma.config.ts.bak  prompt.md  qwe.py  read_docx.py  seed_activities.sql  supabase_handler.py  test.py  test1.py
devstep-ai/: .dockerignore  Dockerfile  init.sql  init_optimized.sql  main.py  pyproject.toml  requirements.txt
devstep-ai/AI-LMS-Assistant-harness/: main.py  output_hook.py  portfolio_analysis.txt  recommend_activity.txt  test_output.json  variables.json
devstep-ai/app/: __init__.py
devstep-ai/app/api/: __init__.py
devstep-ai/app/core/: __init__.py  config.py  database.py
devstep-ai/app/models/: __init__.py  activity.py  ai_processed.py  base.py  crawled.py  onboarding.py  roadmap.py  user.py
devstep-ai/app/prompts/: matching_template.txt  (+5 more)
devstep-ai/scratch/: seed_data.py  test_normalization.py  verify_pipeline.py
(+91 files in other folders)
