[project]
name = "devstep-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29.0",
    "beautifulsoup4>=4.12.0",
    "celery>=5.3.0",
    "fastapi>=0.109.0",
    "google-genai>=0.1.0",
    "langchain>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langchain-openai>=0.0.5",
    "openai>=1.10.0",
    "pgvector>=0.2.4",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "redis>=5.0.0",
    "selenium>=4.17.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.27.0",
]
